# AuditML1

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/experiments/: cifar100_baseline.yaml  cifar10_baseline.yaml  cifar10_dp.yaml  mia_shadow.yaml  mnist_baseline.yaml
docs/: PROJECT_PROGRESS.md  SETUP.md
models/baselines/: README.md
scripts/: full_validation.py  run_all_attacks.py  train_baseline.py  train_dp_models.py  verify_env.py
src/auditml/: __init__.py  cli.py
src/auditml/attacks/: __init__.py  attribute_inference.py  base.py  mia_shadow.py  mia_threshold.py  model_inversion.py
src/auditml/config/: __init__.py  config.py
src/auditml/data/: __init__.py  datasets.py  transforms.py
src/auditml/defenses/: __init__.py  dp_training.py
src/auditml/models/: __init__.py  base.py  cnn.py  resnet.py
src/auditml/reporting/: __init__.py  report.py
src/auditml/training/: __init__.py  losses.py  trainer.py
src/auditml/utils/: __init__.py  experiment.py  logging.py
tests/: conftest.py  test_attacks.py  test_cli_report.py  test_config.py  test_data.py  test_full_validation.py  test_models.py  test_reporting.py  test_scripts_help.py  test_training.py
